# samnefni

./: .envrc  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml  rust.yml
examples/: config.toml
src/: cli.rs  command.rs  config.rs  main.rs  model.rs
src/command/: tests.rs
src/config/: tests.rs
