[package]
name = "samnefni"
description = "'samnefni' means 'alias' in icelandic."
version = "1.0.0"
authors = ["Olivier Detour <detour.olivier@gmail.com>"]
build = "build.rs"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5" }
shadow-rs = "0.35.0"
pest = { version = "2" }
pest_derive = { version = "2" }


[build-dependencies]
shadow-rs = "0.35.0"
