[package]
name = "samnefni"
description = "'samnefni' means 'alias' in icelandic."
version = "1.0.0"
authors = ["Olivier Detour <detour.olivier@gmail.com>"]
build = "build.rs"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5" }
shadow-rs = { version = "0.35.0" }
log = { version = "0.4" }
env_logger = { version = "0.11" }

[build-dependencies]
shadow-rs = { version = "0.35.0" }

[dev-dependencies]
rstest = { version = "0.23" }
