[package]
name = "samnefni"
description = "'samnefni' means 'alias' in icelandic."
version = "1.0.0"
authors = ["Olivier Detour <detour.olivier@gmail.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive", "string"] }
clap_complete = { version = "4.5" }
shadow-rs = { version = "0.38.1" }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
shadow-rs = { version = "0.38.1" }

[dev-dependencies]
rstest = { version = "0.25" }
